--- a/spuri9.gradle
+++ b/spuri9.gradle
@@ -9,9 +9,9 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Implementation  Title' : 'M2',
+        attributes 'Implementation-Title' : 'M2',
                 'Implementation-Version': 1.0,
-                'Main-Class' : 'edu.gatech.oad.antlab.pkg1.Antlab',
+                'Main-Class' : 'edu.gatech.oad.antlab.pkg1.AntLabMain',
                 'Class-Path': '../../lib/resouces.jar'
     }
 }
